# LLM_Assessment_Fubon

./: Explainability .md  Explainability.md  INTEGRATION_README.md  README.md  Safety.md  Transparency.md  assessmentSurveyXin.md  config.json  main.py  model_quantitative_indicator_survey.md  reliability.md  report_generator.py  requirements.txt  setup.py  模型評測機制 - 安全性.pptx  模型評測機制 - 透明性.pptx
safety/: .gitignore  README.md  Safety.md  config.json  main.py  pyproject.toml  requirements.txt  模型評測機制 - 安全性.pptx
safety/BBQ/: README.md  evaluation.py  main.py  pipeline.py  prompt.py  score.py
safety/BIPIA/: README.md  evaluation.py  main.py  pipeline.py  prompt.py  score.py
safety/DirectPromptInjection/: README.md  customLLM.py  pipeline.py
safety/IPIA/: main.py  requirements.txt
safety/InformationDisclosure/: README.md  pipeline.py
safety/Misinformation/: pipeline.py
safety/Toxicity/: README.md  customLLM.py  main.py  pipeline.py
safety/results/: bbq_log_20251223_llama318b.json  bbq_log_20251224_gpt4o.json  bbq_log_20260106_gemma312b.json  bbq_log_20260106_gptoss20b.json  bbq_summary_20251223_llama318b.json  bbq_summary_20251224_gpt4o.json  bbq_summary_20260106_gemma312b.json  bbq_summary_20260106_gptoss20b.json  bipia_log_20251223_llama318b.json  bipia_log_20251224_gpt4o.json  bipia_log_20260106_gemma312b.json  bipia_log_20260106_gptoss20b.json  bipia_summary_20251223_llama318b.json  bipia_summary_20251224_gpt4o.json  bipia_summary_20260106_gemma312b.json  bipia_summary_20260106_gptoss20b.json  directpromptinjection_log_20251226_llama318b.json  (+19 more)
(+285 files in other folders)
